test/typecheck/pass/constraint_ctor/v5.expect
Type error at file "constraint_ctor/v5.sail", line 27, character 3 to line 27, character 29

  [41m_prove(constraint('x >= 4))[0m;

Cannot prove 'x >= 4
